# SteelBorne

./: .gitignore  Cargo.toml  Makefile.toml  README.md  Shuttle.toml  http.http
.cargo/: config.toml
.devcontainer/: devcontainer.json
api/db/: schema.sql
api/my_ca/: Cargo.toml
api/shuttle/: Cargo.toml
api/shuttle/src/: main.rs  trial_askama.rs
api/shuttle/templates/: base.html  index.html  list.html  trial_askama.html  welcome.html
api/shuttle/templates/css/: index.css
front/: Cargo.toml  Dioxus.toml  tailwind.config.js
front/public/: tailwind.css
front/src/: components.rs  main.rs  pages.rs
front/src/components/: counter.rs  footer.rs  navigation_bar.rs  profile_card.rs  selector.rs  sns_link_card.rs  title.rs
front/src/pages/: home.rs  profile.rs
migrations/: 20240214052740_local.sql
my_ca/: Cargo.toml
my_ca/src/: .gitignore  key.rs  key_repository.rs  lib.rs
my_ca/src/key_repository/: postgres_key_repository.rs
