[package]
name = "my_ca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-rt = "2.9.0"
shuttle-secrets = "0.38.0"
shuttle-shared-db = { version = "0.38.0", features = ["postgres", "sqlx"] }
sqlx = "0.7"

anyhow = "*"

serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

