[package]
name = "my_ca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
shuttle-actix-web = "0.38.0"
shuttle-runtime = "0.38.0"
shuttle-secrets = "0.38.0"
shuttle-shared-db = { version = "0.38.0", features = ["postgres", "sqlx"] }
sqlx = "0.7"
